# cmd/api/main.go
@@ -211,7 +211,7 @@ func main() {
 		r.Get("/schedulers/{schedulerId}/result", schedulerHandler.SchedulerResultHandler)
 		r.Post("/calendars/{calendarId}/schedulers/{schedulerId}", schedulerHandler.AddAttendanceHandler)
 		r.Get("/calendars/{calendarId}/schedulers/{schedulerId}", schedulerHandler.GetAttendance)
-		r.Get("/calendars/{calendarId}/schedulers/{schedulerId}", schedulerHandler.GetUserStatus)
+		r.Get("/calendars/{calendarId}/schedulers/{schedulerId}/user-status", schedulerHandler.GetUserStatus)
 	})
 
 	// Start Serving
